--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                         </div>
 <!--                                    </div>-->
                                 </div>
-                                <div class="col-sm-12 col-md-12 px-0 pb-0 pt-3  " >
+                                <div class="col-sm-12 col-md-12 px-0 pb-0 pt-3  " style="font-size: 18px !important;">
                                     <div id="ck1" class="contents text-right">
                                         <h4>[Business Name]</h4><br>
                                         [Business Address]<br>
@@ -262,14 +262,14 @@
                     </div>
                     <div class="col-sm-12 row mx-auto ">
 
-                        <div class="col-sm-12 col-md-7 row">
-                            <div class="col-sm-12 px-0 col-md-3" >
-                                <div id="ck6" class="contents text-left font-weight-bolder">
+                        <div class="col-sm-12 col-md-6 row">
+                            <div class="col-sm-12 px-0 col-md-4" >
+                                <div id="ck6" style="font-size: 18px;" class="contents text-left font-weight-bolder">
                                     Billing To:
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-9 p-0">
-                                <div id="ck5" class="contents text-left p-0">
+                            <div class="col-sm-12 col-md-8 p-0">
+                                <div id="ck5" class="contents text-left p-0" style="font-size: 18px !important;">
                                     [Client Name]<br>
                                     [Client Address Line 1]<br>
                                     <span class="d-flex">
@@ -281,34 +281,34 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="clone_me"  style="padding-top: 10px;" class="col-sm-12 col-md-5 ">
+                        <div id="clone_me"  style="padding-top: 10px;" class="col-sm-12 col-md-6 ">
                             <div class="row cloned">
-                                <div class="col-sm-7 text-right pr-0">
+                                <div class="col-sm-8 text-right ">
                                     <label for="bs_invoice_no" class="no-label"></label>
-                                    <input type="text" style="font-weight: bolder;" class="  no-border input_title_sm2 text-right " id="bs_invoice_no" placeholder="Invoice No:">
+                                    <input type="text" style="font-weight: bolder;" class=" pr-2 no-border input_title_sm2 text-right " id="bs_invoice_no" placeholder="Invoice No:">
                                 </div>
-                                <div class="col-sm-5 text-right pr-0 pl-0">
+                                <div class="col-sm-4 text-right pr-0 pl-0">
                                     <label for="bs_invoice_no_text" class="no-label"></label>
                                     <input type="text" class=" no-border input_title_sm22 text-right" id="bs_invoice_no_text" placeholder="Invoice Number">
                                 </div>
                             </div>
                             <div class="row cloned">
-                                <div class="col-sm-7 text-right pr-0">
+                                <div class="col-sm-8 text-right ">
                                     <label for="bs_datw" class="no-label"></label>
-                                    <input type="text" style="font-weight: bolder;" class="  no-border input_title_sm2 text-right" id="bs_datw" placeholder="Date:">
+                                    <input type="text" style="font-weight: bolder;" class="pr-2  no-border input_title_sm2 text-right" id="bs_datw" placeholder="Date:">
                                 </div>
-                                <div class="col-sm-5 text-right pr-0 pl-0">
+                                <div class="col-sm-4 text-right pr-0 pl-0">
                                     <label for="bs_date_no_text" class="no-label"></label>
                                     <input value="" type="text" class=" no-border input_title_sm22 text-right" id="bs_date_no_text"  placeholder="">
                                 </div>
                             </div>
-                            <span id="invoice_add">
+                            <span id="invoice_add" style="margin-left: 100px;">
                                 <i  class="fas fa-plus-square text-success print_hide" data-toggle="tooltip" data-placement="left" title="Add another row"></i>
                             </span>
                         </div>
                     </div>
                     <div class="col-sm-12 row mx-auto py-4">
-                         <table style="width: 100%; margin-top: 5px;" rules="none"  class="table table-bordered main-table resizable" id="table">
+                         <table style="width: 100%; margin-top: 5px; font-size: 18px !important;" rules="none"  class="table table-bordered main-table resizable" id="table">
                             <thead >
                                 <tr style="background-color: #f6f6f6">
                                     <th style="border-right: none; padding:0 9px !important;vertical-align: initial !important;" scope="col">
@@ -439,8 +439,8 @@
                          </table>
                     </div>
                     <div class="col-sm-12 row mx-auto py-2">
-                        <span id="cknotes" class="text-left w-100 border-bottom ">Notes / Terms</span>
-                        <div style="min-height: 400px; border-top:  1px solid #00000060 !important" class="w-100 text-left" id="validationTextarea">
+                        <span id="cknotes" class="text-left w-100 border-bottom " style="font-size: 18px !important;">Notes / Terms</span>
+                        <div style="min-height: 400px; border-top:  1px solid #00000060 !important; font-size: 18px !important;" class="w-100 text-left" id="validationTextarea">
                            <span> Notes</span>
                         </div>
                     </div>
