--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 row mx-auto py-4">
-                         <table data-resizable-columns-id="demo-table" style="width: 100%; margin-top: 5px; font-size: 18px !important;" rules="none"  class="table table-bordered main-table resizable" id="table">
+                         <table data-resizable-columns-id="demo-table1" style="width: 100%; margin-top: 5px; font-size: 18px !important;" rules="none"  class="table table-bordered main-table resizable" id="table">
                             <thead >
                                 <tr style="background-color: #f6f6f6">
                                     <th data-resizable-column-id="descriptionn" style="border-right: none; padding:0 9px !important;vertical-align: initial !important;" scope="col">
@@ -672,6 +672,11 @@
 
 <script type="text/javascript" src="static/main.js" ></script>
 <script>
+
+    $('table.resizable').resizableColumns({
+        store: window.store
+    });
+
     $('.custom-range').each(function () {
         var $indicator = $(this).parent().find('em');
         $(this).change(function () {
